se agrega la seccion de productos

--- a/index.html
+++ b/index.html
@@ -251,6 +251,70 @@
         </div>
       </div>
     </div>
+
+    <section class="productos container py-5">
+      <h2 class=" title-h2 text-center text-uppercase mt-4">
+        <span class=" text-lowercase d-block ">nuestros</span> productos
+      </h2>
+      <div class="row py-5">
+        <div class="col-md-3 mb-4">
+          <div class="card">
+            <a href="#">
+              <img src="img/servicio_03.jpg" class="card-img-top">
+              <div class="card-body">
+                <h3 class=" card-title text-center text-uppercase">producto 1</h3>
+                <p class="card-text text-uppercase">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat facilis
+                </p>
+                <p class="precio mb-0 text-center lead">25$</p>
+              </div>
+            </a>
+          </div><!-- card -->
+        </div><!-- col-md-3 mb-4 -->
+        <div class="col-md-3 mb-4">
+          <div class="card">
+            <a href="#">
+              <img src="img/servicio_03.jpg" class="card-img-top">
+              <div class="card-body">
+                <h3 class=" card-title text-center text-uppercase">producto 1</h3>
+                <p class="card-text text-uppercase">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat facilis
+                </p>
+                <p class="precio mb-0 text-center lead">25$</p>
+              </div>
+            </a>
+          </div><!-- card -->
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card">
+            <a href="#">
+              <img src="img/servicio_03.jpg" class="card-img-top">
+              <div class="card-body">
+                <h3 class=" card-title text-center text-uppercase">producto 1</h3>
+                <p class="card-text text-uppercase">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat facilis
+                </p>
+                <p class="precio mb-0 text-center lead">25$</p>
+              </div>
+            </a>
+          </div><!-- card -->
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card">
+            <a href="#">
+              <img src="img/servicio_03.jpg" class="card-img-top">
+              <div class="card-body">
+                <h3 class=" card-title text-center text-uppercase">producto 1</h3>
+                <p class="card-text text-uppercase">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo repellat facilis
+                </p>
+                <p class="precio mb-0 text-center lead">25$</p>
+              </div>
+            </a>
+          </div><!-- card -->
+        </div><!-- col-md-3 mb-4 -->
+      </div><!-- row -->
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
