--- a/index.html
+++ b/index.html
@@ -315,6 +315,40 @@
         </div><!-- col-md-3 mb-4 -->
       </div><!-- row -->
     </section>
+
+    <div class="citas container-fluid py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6 text-center">
+          <h1 class=" text-uppercase">realiza una cita</h1>
+          <p class=" mt-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure dolorum esse sint cupiditate iusto quaerat recusandae temporibus? Placeat porro quibusdam hic illo ab voluptate, reiciendis facere assumenda cum culpa ratione?</p>
+          <a href="#" class=" btn btn-primary mt-3 btn-lg text-uppercase">Leer mas</a>
+        </div>
+      </div>
+    </div>
+
+    <footer class=" footer-sitio pt-3 mt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h1 class="text-center text-uppercase pb-4 h3">Nosotros</h1>
+              <p class=" text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum odio possimus repellendus excepturi ea fugit rerum adipisci.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h1 class="text-center text-uppercase pb-4 h3">Horrio</h1>
+              <p class=" text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum odio possimus repellendus excepturi ea fugit rerum adipisci.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h1 class="text-center text-uppercase pb-4 h3">contacto</h1>
+              <p class=" text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum odio possimus repellendus excepturi ea fugit rerum adipisci.
+              </p>
+            </div>
+            <hr class="w-100">
+            <p class=" text-center copyright w-100">Carolina Spa & salon 2020. todos los derechos reservados</p>
+          </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
